Footer styling Footer no longer covers content as list of links grow.

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,10 +1,11 @@
 .container {
   position: absolute;
-  z-index: -5;
   bottom: 0;
   width: 100%;
+  height: 3rem;
   padding: 1rem;
   background-color: #26384a;
   color: white;
   font-size: small;
+  text-align: center;
 }
